Fix groupheader z-fighting
The groupheader table is sticky and meant to stack on top of other
elements.
When placed together with a data table the header of that table has the
same z-index causing z-fighting and visual overlap between the two.
By increasing the z-index of the groupheader by 1 we ensure it will
stack above other table headers.

Jira: CMK-29984
(cherry picked from commit 8a39a916a2c3a896c93e0e678068d826f1d8e3b3)

--- a/packages/cmk-frontend/src/themes/facelift/scss/_pages.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_pages.scss
@@ -571,7 +571,8 @@ table.groupheader {
   margin: 0 0 $h3-margin-bottom;
   position: sticky;
   top: 0;
-  z-index: $sticky-table-header-z-index;
+  // Group headers should stack above the table headers
+  z-index: calc($sticky-table-header-z-index + 1);
 
   td {
     text-align: left;
